--- a/cms/view/common/sidebar.html
+++ b/cms/view/common/sidebar.html
@@ -60,6 +60,12 @@
       <li>
         <a href="jion.php"><span class="glyphicons glyphicon-list"></span><span class="sidebar-title">加入我们</span></a>
       </li>
+      <li>
+        <a href="user.php"><span class="glyphicons glyphicon-list"></span><span class="sidebar-title">会员管理</span></a>
+      </li>
+      <li>
+        <a href="message.php"><span class="glyphicons glyphicon-list"></span><span class="sidebar-title">在线联系</span></a>
+      </li>
       
       <!-- <li>
         <a href="user.php"><span class="glyphicons glyphicon-list"></span><span class="sidebar-title">会员管理</span></a>
