--- a/css/change_password.css
+++ b/css/change_password.css
@@ -14,26 +14,25 @@
 	color:#e97520;
 }
 .main{
+	position: relative;
 	width:1003px;
+	height: 545px;
 	margin:0 auto;
 	border:1px solid #ccc;
 	overflow: hidden;
 	background:#fcfcfc;
-	position: relative;
-	height: 545px;
 }
 .main .main_left{
 	width:220px;
 	float:left;
 }
 .main .main_left .phone{
-	width:300px;
+	width: 220px;
 	height:86px;
 	border-bottom:1px solid #ccc;
-	padding:49px 0 90px 80px;
+	padding:19px 0 0 29px;
 }
 .main .main_left .phone div{
-	margin-bottom: 30px;
 	width:57px;
 	height:57px;
 	border:1px solid #ccc;
@@ -46,46 +45,40 @@
 	height:83px;
 	float:left;
 	border-bottom:0;
-	
 }
 .main .main_left p{
-	width:300px;
+	width: 220px;
 	height:48px;
-	border-bottom:1px solid rgb(22, 20, 20);
+	border-bottom:1px solid #ccc;
 	line-height: 48px;
 	font-size:14px;
 	color:#666;
 	text-align: center;
-	/* margin-top: 30px; */
-	/* padding-left:33px; */
 }
 .main .main_left .p1{
+	text-indent: -140px;
 	background: #507a45;
 	color:#fff;
-	margin: 0;
-	padding: 0;
-	text-align: center;
-	text-indent: -200px;
 }
 .main .main_right{
-	width:702px;height:545px;
+	width:782px;height:545px;
 	border-left:1px solid #ccc;
 	float:left;
 	background:#fff;
 	position: absolute;
-	top: 0;
+	top:0;
 	right: 0;
 }
 .main .main_right h1{
-	width:702px; height:54px;
+	width:759px; height:54px;
 	border-bottom:1px solid #ccc;
 	color:#507a45;
 	line-height: 54px;
 	font-size:18px;
 	font-weight:900;
-	padding-left:23px;
 	text-align: left;
-	/* background:url(../images/message.jpg) no-repeat 113px 19px; */
+	padding-left:2em;
+	background:url(../images/message.jpg) no-repeat 113px 19px;
 }
 .main .main_right .txt{
 	width:250px; height:38px;
@@ -93,21 +86,37 @@
 	border-radius:5px;
 	padding-left:10px;
 }
+.main .main_right img{
+	position: relative;
+	left: -30px;
+}
 .main .main_right table{
-	margin: 50px auto;
+	margin: 40px auto;
 }
 .main .main_right table tr{
 	height:52px;
 }
 .main .main_right table tr td:nth-of-type(1){
-	padding:0 20px 20px;
+	padding:0 20px;
 	text-align:right;
+}
+.main .main_right table tr td .pass_p{
+	padding-left:43px;
+	background: url(../images/pass.jpg) no-repeat 13px 3px;
+}
+.main .main_right table tr .submit input{
+	width: 118px; height: 38px;
+	background: #507a45;
+	border:1px solid #507a45;
+	border-radius:5px;
+	color:#fff;
+	margin-left:145px;
 }
 
 .bottom{
-	width:702px; height:68px;
+	width:782px; height:68px;
 } 
-/* .foot{
+.foot{
 	width:100%; height:68px;
 	background:rgba(50,50,50,1);
 	padding-top:20px;
@@ -117,4 +126,4 @@
 	color:#666;
 	font-size: 14px;
 	margin:5px 0;
-} */
+}
