--- a/view/change_password.html
+++ b/view/change_password.html
@@ -1,9 +1,9 @@
-<?php include('view/common/meta.html'); ?>
-<link rel="stylesheet" href="css/change_password.css">
-<body>
-	<div class="container">
 
-			<?php include('view/common/header.html'); ?>
+<link rel="stylesheet" href="css/change_password.css">
+
+	<?php include('view/common/header.html'); ?>
+	<div class="container mt">
+
 
 		<div class="main_nav">
 			<nav>
@@ -19,7 +19,7 @@
 					<p><?php echo $userinfo['u_name'] ?></p>
 				</div>
 				<a href="user_info.php"><p class="p1">基本信息</p></a> 
-				<a href="message.php"><p>客户留言 </p></a>
+				<!-- <a href="message.php"><p>客户留言 </p></a> -->
 			</div>
 			<div class="main_right">
 				<h1>修改密码</h1>
@@ -65,13 +65,11 @@
 			</div>
 		</div>
 		<div class="bottom"></div>
-		<div class="foot">
-			<p>粤ICP备12022584号-3</p>
-			<p>广州文豆网络科技有限公司 Copyright 2009-2015 ,All Rights Reserved wengdo</p>
-		</div>
 	</div>
-</body>
-</html>
+<!-- footer start -->
+<?php include('view/common/footer.html') ?>
+<!-- footer end -->
+
 <!-- 导航滚动条 -->
 <script src='js/nav_scroll.js'></script>
 
