--- a/view/common/footer.html
+++ b/view/common/footer.html
@@ -1,12 +1,16 @@
+
+
 <footer class="bgc">
         <div class="container">
             <div class="row ft">
                 <div class="col-lg-7">
                     <div class="rwo">
                         <div class="col-lg-12 mpz">
-                            <h5>联系我们</h5>
+                            <h5><?php echo $_COOKIE['contact']  ?></h5>
                         </div>
-                        <div class="col-lg-12 mpz">
+                        <?php echo $_COOKIE['cont']  ?>
+
+                        <!-- <div class="col-lg-12 mpz">
                             <h6 class="po">天下视</h6>
                         </div>
                         <div class="row pp">
@@ -28,7 +32,8 @@
                             <div class="col-lg-8">
                                 <img src="<?php echo _IMG_ ?>tcs.jpg" alt="" class="tcs">
                             </div>
-                        </div>
+                        </div> -->
+                        
                     </div>
                 </div>
                 <div class="col-lg-5">
