--- a/cms/view/message.html
+++ b/cms/view/message.html
@@ -14,7 +14,7 @@
     <div id="topbar" class="affix">
       <ol class="breadcrumb">
         <li><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
-        <li class="active">留言管理</li>
+        <li class="active">在线留言管理</li>
       </ol>
     </div>
     <div class="container">
@@ -25,7 +25,7 @@
         <div class="col-md-12">
 			<div class="panel">
                 <div class="panel-heading">
-                  <div class="panel-title">留言列表</div>
+                  <div class="panel-title">在线留言列表</div>
                 </div>
                 <form action="" method="post">
                 <div class="panel-body">
@@ -36,18 +36,24 @@
                         <th width="100">编号</th>
                         <th>姓名</th>
                         <th>电话</th>
+                        <th>性别</th>
+                        <th>年龄</th>
                         <th>邮箱</th>
-                        <th>留言</th>
+                        <th>在线留言</th>
+                        <th>留言时间</th>
                         <th width="200">操作</th>
                       </tr>
                       <?php foreach($message as $v){ ?>
                     	<tr class="success">
                         <td class="text-center"><input type="checkbox" value="<?php echo $v['m_id'] ?>" name="midarr[]" class="cbox"></td>
-                        <td><?php echo $v['m_id'] ?></td>
+                        <td><?php echo $v['u_id']==0?'':$v['u_id'] ?></td>
                         <td><?php echo $v['m_name'] ?></td>
                         <td><?php echo $v['m_phone'] ?></td>
+                        <td><?php echo $v['m_sex']==0?'女':'男' ?></td>
+                        <td><?php echo $v['m_ages']==0?'':$v['m_ages'] ?></td>
                         <td><?php echo $v['m_email'] ?></td>
                         <td><?php echo $v['m_content'] ?></td>
+                        <td><?php echo isset($v['m_time'])?date('Y-m-d h:i:s' ,$v['m_time'] ):'' ?></td>
                         <td>
 		                      <div class="btn-group">
 		                        <a onclick="return confirm('确定要删除吗？');" href="message_del.php?mid=<?php echo $v['m_id'] ?>" class="btn btn-default btn-gradient dropdown-toggle"><span class="glyphicons glyphicon-trash"></span></a>
