--- a/cms/view/user.html
+++ b/cms/view/user.html
@@ -1,4 +1,6 @@
 <?php include('view/common/header.html'); ?>
+<link rel="stylesheet" href="include/page/css.css">
+
 <!-- End: Header -->
 
 <!-- Start: Main -->
@@ -12,7 +14,7 @@
     <div id="topbar" class="affix">
       <ol class="breadcrumb">
         <li><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
-        <li class="active">轮播图管理</li>
+        <li class="active">会员管理</li>
       </ol>
     </div>
     <div class="container">
@@ -23,38 +25,36 @@
         <div class="col-md-12">
 			<div class="panel">
                 <div class="panel-heading">
-                  <div class="panel-title">轮播图列表</div>
-                  <a href="banner_add.php" class="btn btn-info btn-gradient pull-right"><span class="glyphicons glyphicon-plus"></span>添加轮播图</a>
+                  <div class="panel-title">会员列表</div>
                 </div>
                 <form action="" method="post">
                 <div class="panel-body">
-                  <h2 class="panel-body-title">轮播图管理</h2>
+                  <h2 class="panel-body-title">导航</h2>
                   <table class="table table-striped table-bordered table-hover dataTable">
                       <tr class="active">
                         <th class="text-center" width="100"><input type="checkbox" value="" id="checkall" class=""> 全选</th>
-                        
-                        <th>编号</th>
-                        <th>主题</th>
-                        <th>副题</th>
-                        <th>案例图片</th>
-                        <th>是否显示</th>
+                        <th width="100">编号</th>
+                        <th>账号名称</th>
+                        <th>真实姓名</th>
+                        <th>电&emsp;&emsp;话</th>
+                        <th>邮&emsp;&emsp;箱</th>
+                        <th>最后登陆时间</th>
                         <th width="200">操作</th>
                       </tr>
-                      <?php foreach($banner as $v){ ?>
+                      <?php foreach($user as $v){ ?>
                     	<tr class="success">
-                        <td class="text-center"><input type="checkbox" value="<?php echo $v['b_id'] ?>" name="bidarr[]" class="cbox"></td>
-                        <td><?php echo $v['b_id'] ?></td>
-                        <td><?php echo $v['b_titile'] ?></td>
-                        <td><?php echo $v['b_txt'] ?></td>
-                        <td><img src="<?php echo _THUMB_.$v['b_thumb'] ?>" alt="缩略图"></td>
-                        <td><?php echo $v['b_isshow']==1?'是':'否'; ?></td>
+                        <td class="text-center"><input type="checkbox" value="<?php echo $v['u_id'] ?>" name="uidarr[]" class="cbox"></td>
+                        <td><?php echo $v['u_id'] ?></td>
+                        <td><?php echo $v['u_name'] ?></td>
+                        <td><?php echo $v['u_real'] ?></td>
+                        <td><?php echo $v['u_phone'] ?></td>
+                        <td><?php echo $v['u_email'] ?></td>
+                        <td><?php echo !empty($v['lasttime'])?date('Y-m-d', $v['lasttime']):''; ?></td>
                         <td>
 		                      <div class="btn-group">
-		                        <a href="banner_edit.php?bid=<?php echo $v['b_id'] ?>" class="btn btn-default btn-gradient">
-                              <span class="glyphicons glyphicon-pencil"></span></a>
-                            <a onclick="return confirm('确定要删除吗？');" href="banner_del.php?bid=<?php echo $v['b_id'] ?>"
-                               class="btn btn-default btn-gradient dropdown-toggle"><span class="glyphicons glyphicon-trash"></span></a>
+		                        <a onclick="return confirm('确定要删除吗？');" href="user_del.php?uid=<?php echo $v['u_id'] ?>" class="btn btn-default btn-gradient dropdown-toggle"><span class="glyphicons glyphicon-trash"></span></a>
 		                      </div>
+                        
                         </td>
                       </tr>
                       <?php } ?>
@@ -65,6 +65,7 @@
                   </div>
                   
                   <div class="pull-right">
+                      <?php echo $page; ?>
                     
                   </div>
                   
@@ -82,4 +83,5 @@
   </section>
   <!-- End: Content --> 
 </div>
+<!-- End: Main --> 
 <?php include('view/common/footer.html'); ?>
