--- a/css/change_message.css
+++ b/css/change_message.css
@@ -1,10 +1,10 @@
-
 .main_nav{
 	width:1003px; height:36px;
 	line-height: 36px;
 	margin:0 auto;
 	text-align: left;
 	text-indent: 2em;
+
 }
 .main_nav nav,.main_nav nav a{
 	color:#4c4c4c;
@@ -20,20 +20,19 @@
 	overflow: hidden;
 	background:#fcfcfc;
 	position: relative;
-	height: 545px;
 }
 .main .main_left{
 	width:220px;
+	height: 585px;
 	float:left;
 }
 .main .main_left .phone{
-	width:300px;
+	width:191px;
 	height:86px;
 	border-bottom:1px solid #ccc;
-	padding:49px 0 90px 80px;
+	padding:19px 0 0 29px;
 }
 .main .main_left .phone div{
-	margin-bottom: 30px;
 	width:57px;
 	height:57px;
 	border:1px solid #ccc;
@@ -46,38 +45,31 @@
 	height:83px;
 	float:left;
 	border-bottom:0;
-	
 }
 .main .main_left p{
-	width:300px;
+	widows: 220px;;
 	height:48px;
-	border-bottom:1px solid rgb(22, 20, 20);
+	border-bottom:1px solid #ccc;
 	line-height: 48px;
 	font-size:14px;
 	color:#666;
-	text-align: center;
-	/* margin-top: 30px; */
 	/* padding-left:33px; */
 }
 .main .main_left .p1{
 	background: #507a45;
 	color:#fff;
-	margin: 0;
-	padding: 0;
-	text-align: center;
-	text-indent: -200px;
 }
 .main .main_right{
-	width:702px;height:545px;
+	width:782px;height:585px;
 	border-left:1px solid #ccc;
-	float:left;
+	float: right;
 	background:#fff;
 	position: absolute;
 	top: 0;
 	right: 0;
 }
 .main .main_right h1{
-	width:702px; height:54px;
+	width:759px; height:54px;
 	border-bottom:1px solid #ccc;
 	color:#507a45;
 	line-height: 54px;
@@ -85,6 +77,7 @@
 	font-weight:900;
 	padding-left:23px;
 	text-align: left;
+	text-indent: 2em;
 	/* background:url(../images/message.jpg) no-repeat 113px 19px; */
 }
 .main .main_right .txt{
@@ -94,27 +87,43 @@
 	padding-left:10px;
 }
 .main .main_right table{
-	margin: 50px auto;
+	margin: 20px auto;
 }
 .main .main_right table tr{
 	height:52px;
 }
 .main .main_right table tr td:nth-of-type(1){
-	padding:0 20px 20px;
+	padding:0 30px 20px;
 	text-align:right;
+}
+.main .main_right table tr .cswbtn{
+	width: 100px; height: 38px;
+	background: #507a45;
+	border:1px solid #507a45;
+	border-radius:5px;
+	color:#fff;
+}
+.cswa{
+	/* padding:0 10px; */
+	display: inline-block;
+	height: 38px;
+	background: #b94004;
+	line-height: 38px;
+	border-radius:5px;
+	color:#fff;
+	margin-left:21px;
 }
 
 .bottom{
-	width:702px; height:68px;
+	width:782px; height:68px;
 } 
-/* .foot{
-	width:100%; height:68px;
-	background:rgba(50,50,50,1);
-	padding-top:20px;
-	text-align: center;
+
+#tip, #atip, #ptip {
+    color: red;
+    text-align: left;
+    text-indent: 6em;
+    font-size: .5em;
 }
-.foot p{
-	color:#666;
-	font-size: 14px;
-	margin:5px 0;
-} */
+.main .main_right table tr.cswtr{
+	height: 20px;
+}
