--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@ body {
     margin: 0;
     padding: 0;
 }
-
+/* div{
+    text-align: left;
+} */
 .logo {
     max-width: 4em;
     max-height: 3em;
