--- a/view/common/header.html
+++ b/view/common/header.html
@@ -21,7 +21,7 @@
         }
 
 
-        div {
+        #csw_box div {
             text-align: center;
             clear: both;
         }
@@ -158,6 +158,7 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
+                        
                         <a class="nav-link" href="<?php echo _WEB_ ?>new.php">新闻资讯</a>
 
                     </li>
